# nx-vis-visualizer

./: .gitignore  .pre-commit-config.yaml  README.md  generate_graph_examples.py  main.py  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yml
docs/: index.md  installation.md  main.py  usage.md
docs/assets/: minimal_vis_graph.html  test_iframe_content.html
docs/assets/generated_graphs/: advanced_showcase_example.html  course_prerequisites_example.html  cycle_graph_example.html  karate_club_example.html  simple_directed_example.html
docs/examples/: basic.md  customization.md  directed.md
examples/: advanced_showcase.py  advanced_showcase_graph.html  complete_graph_example.html  course_prerequisites_example.py  customization_example.py  cycle_example.py  karate_club_example.py  simple_directed_example.py  simple_graph.py
src/nx_vis_visualizer/: core.py
src/nx_vis_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
