[project]
name = "nx-vis-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "types-networkx>=3.5.0.20250531",
]
notebook = [
    "ipython>=9.3.0",
]
