[project]
name = "nx-vis-visualizer"
version = "0.1.0"
description = "A Python wrapper for rendering NetworkX graphs interactively using vis.js."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

keywords = ["networkx", "vis.js", "graph", "visualization", "interactive"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "networkx>=3.5",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "types-networkx>=3.5.0.20250531",
]
notebook = [
    "ipython>=9.3.0",
]

[tool.ruff]
line-length = 80
select = ["E", "W", "F", "I", "UP", "C4", "B", "A", "RUF"]
ignore = ["E501"] # Handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
strict_equality = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "IPython.*"
ignore_missing_imports = true

files = ["src/nx_vis_visualizer", "tests", "examples", "docs/main.py"]
